syntax = "proto3";

package object_detection;

message Detection {
  float x1 = 1;
  float y1 = 2;
  float x2 = 3;
  float y2 = 4;
  float confidence = 5;
  string label = 6;
}

message DetectionResult {
  repeated Detection detections = 1;
}